--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Academic Portfolio</title>
+    <!-- Corrected Tailwind CSS Link -->
     <script src="[https://cdn.tailwindcss.com](https://cdn.tailwindcss.com)"></script>
   </head>
-  <body>
+  <body class="m-0 p-0">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
