--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Academic Portfolio</title>
+    <title>Baoyu (Brian) Dai | Portfolio</title>
     <!-- Corrected Tailwind CSS Link -->
     <script src="[https://cdn.tailwindcss.com](https://cdn.tailwindcss.com)"></script>
   </head>
