--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Baoyu (Brian) Dai | Portfolio</title>
-    <!-- Corrected Tailwind CSS Link -->
+    <!-- Clean Tailwind CSS Link - No extra brackets -->
     <script src="[https://cdn.tailwindcss.com](https://cdn.tailwindcss.com)"></script>
   </head>
   <body class="m-0 p-0">
